<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyTasks</string>
    <string name="actvity_groups">Manage Groups</string>
    <string name="action_settings">Settings</string>
    <string name="action_newGroup">Add Group</string>
    
    <string name="default_string">Undefined</string>
    <string name="default_code">ME</string>
    <string name="default_time">12:00</string>
    
    <string name="task_hint">Undefined task.</string>
    <string name="group_desc_hint">Undefined group.</string>
    <string name="group_hint">--</string>
    <string name="time_hint">00:00</string>
    
    <string name="group_img_desc">Icon representing group style</string>
    
    <string name="x_string">x</string>
    

</resources>
